--- a/secao3/Seção 3 - Exercícios Propostos.ipynb
+++ b/secao3/Seção 3 - Exercícios Propostos.ipynb
@@ -134,19 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fiz\n",
-      "Buzz\n",
-      "FizzBuzz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fizzbuzz(n):\n",
     "    if n%2 == 0:\n",
@@ -154,7 +144,29 @@
     "            print(\"FizzBuzz\")\n",
     "        else:\n",
     "            print(\"Fizz\")\n",
-    "    if n%5 == 0 and n%2 != 0"
+    "    if n%5 == 0 and n%2 != 0:\n",
+    "        print(\"Buzz\")\n",
+    "    if n%5 != 0 and n%2 != 0:\n",
+    "        return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "fizzbuzz(5)"
    ]
   }
  ],
